--- a/team/index.html
+++ b/team/index.html
@@ -7,11 +7,14 @@ title: About The Team
 <div class="layout--trio {% cycle '','rev' %}">	
 	<div class="block text first">
  		<h2 class="less">{{ member.name }}</h2>
- 		<p>{{ member.bio }}</p>
+ 		<p>{{ member.bio }}<br /><a href="{{member.link}}">{{member.link}}</a></p>
+
  	</div><!-- 
  --><div class="block square">
 		<img src="{{member.image}}" width="100%" class="res-image" />
 	</div><!--
- --><div class="block text second"></div>
+ --><div class="block text second">
+ 		
+ </div>
 </div>
 {% endfor %}
