--- a/team/index.html
+++ b/team/index.html
@@ -4,17 +4,26 @@ title: About The Team
 ---
 
 {% for member in site.data.team %}
-<div class="layout--trio {% cycle '','rev' %}">	
-	<div class="block text first">
- 		<h2 class="less">{{ member.name }}</h2>
- 		<p>{{ member.bio }}<br /><a href="{{member.link}}">{{member.link}}</a></p>
+	{% capture id %}{{ member.name | downcase | remove:' '}}{% endcapture %}
+	<div class="layout--trio {% cycle '','rev' %}" id="{{ id }}">	
+		<div class="block text first">
+	 		
+	 		<h2 class="m-less">{{ member.name }}</h2>
+	 		<p>{{ member.bio }}<br /><a href="{{member.link}}">{{member.link}}</a></p>	 		
 
- 	</div><!-- 
- --><div class="block square">
-		<img src="{{member.image}}" width="100%" class="res-image" />
-	</div><!--
- --><div class="block text second">
- 		
- </div>
-</div>
+	 	</div><!-- --><div class="block square">
+			
+			<img src="{{member.image}}" width="100%" class="res-image" />
+
+		</div><!-- --><div class="block text second">
+
+
+	 	</div>
+	</div><!-- .layout trio -->
 {% endfor %}
+
+<div class="layout--uno rev">	
+	<div class="block text">
+ 		<p class="actions"><a class="button" href="{{site.url}}/work/">Our Work <span class="icon-arrow-right icon-right"></a></p>
+ 	</div>
+</div><!-- .layout uno -->
