--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: About Us
 		{{ homepage | markdownify }}		
  	</div><!-- 
  --><div class="block square sidebar	">
-		<img src="http://placekitten.com/600/600" width="100%" class="res-image" />
+		<img src="http://placehold.it/600x600" width="100%" class="res-image" />
 		<!-- <h2>We are:</h2>
 		<ul>
 		{% for member in site.data.team %}
