another blog entry and some tinkering with layouts.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ title: About Us
  	</div><!-- 
  --><div class="block square sidebar	">
 		<img src="http://placehold.it/600x600" width="100%" class="res-image" />
+		<div class="news">
+			<p class="m-less">We're an ODI Node</p>
+			<script src="http://theodi.org/nodes/leeds/badge.js"></script>
+		</div>
 		<!-- <h2>We are:</h2>
 		<ul>
 		{% for member in site.data.team %}
@@ -20,8 +24,10 @@ title: About Us
 	</div>
  </div>
 
- <div class="layout--uno rev">	
-	<div class="block text">
+ <div class="layout--duo rev">	
+	<div class="block">
+		
+	</div><!-- --><div class="block text">
  		<p class="actions"><a class="button" href="{{site.url}}/team/"><span class="icon-arrow-right"></span>Meet the team</a></p>
  	</div>
 </div><!-- .layout uno -->
