--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: About Us
 		{{ homepage | markdownify }}		
  	</div><!-- 
  --><div class="block square sidebar	">
-		<img src="http://placehold.it/600x600" width="100%" class="res-image" />
+		<img src="" width="100%" class="res-image" />
 		<div class="news">
 			<p class="m-less">We're an ODI Node</p>
 			<script src="http://theodi.org/nodes/leeds/badge.js"></script>
