--- a/team/index.html
+++ b/team/index.html
@@ -7,14 +7,14 @@ title: About The Team
 	{% capture id %}{{ member.name | downcase | remove:' '}}{% endcapture %}
 	<div class="layout--trio {% cycle '','rev' %}" id="{{ id }}">	
 
-		<div class="block text first">
+		<div class="block text square">
 	 		
-	 		<h2 class="m-less">{{ member.name }}</h2>
-	 		<p>{{ member.bio }}<br /><a href="{{member.link}}">{{member.link}}</a></p>	 		
+	 		<img src="{{member.image}}" width="100%" class="res-image" />
 
-	 	</div><!-- --><div class="block square">
+	 	</div><!-- --><div class="block first">
 
-				<img src="{{member.image}}" width="100%" class="res-image" />
+			<h2 class="m-less">{{ member.name }}</h2>
+	 		<p>{{ member.bio }}<br /><a href="{{member.link}}">{{member.link}}</a></p>	 						
 
 		</div><!-- --><div class="block text second">
 
@@ -23,8 +23,10 @@ title: About The Team
 	</div><!-- .layout trio -->
 {% endfor %}
 
-<div class="layout--uno rev">	
-	<div class="block text">
+<div class="layout--duo rev">	
+	<div class="block square">
+		<!-- nothing -->
+	</div><!-- --><div class="block text">
  		<p class="actions"><a class="button" href="{{site.url}}/work/">Our Work <span class="icon-arrow-right icon-right"></a></p>
  	</div>
 </div><!-- .layout uno -->
