images for new stories.

--- a/team/index.html
+++ b/team/index.html
@@ -23,7 +23,7 @@ title: About The Team
 	</div><!-- .layout trio -->
 {% endfor %}
 
-<div class="layout--duo rev">	
+<div class="layout--duo">	
 	<div class="block square">
 		<!-- nothing -->
 	</div><!-- --><div class="block text">
