--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: About Us
 
  	</div><!-- 
  --><div class="block square sidebar">
-		<img src="img/greenhouse.jpg" width="100%" class="res-image" />
+		<img src="img/home.jpg" width="100%" class="res-image" />
 		<div class="news">
 			<p class="m-less">We're an ODI Node</p>
 			<script src="http://theodi.org/nodes/leeds/badge.js"></script>
